AI: 实例根/权限同步/收尾根治(陈旧态批 §3.7/§3.8/§3.9余项)
§3.7 工具权限覆盖跨实例同步(安全关键):AiToolPermissionStore 复刻
SkillRegistry.syncDisabledFromDisk 的 mtime 自同步——每个 getOverride*/
getPathOverrides/getOverrides 入口先 syncFromDisk(),仅当文件 mtime 变化才
重读;读写全 synchronized(聊天页 worker 线程读 vs FX 线程写)。重读原子化
(解析入新 map、成功才 swap),corrupt/并发半写永不把 live 覆盖清成更松。
根治设置页收紧权限后聊天页仍旧内存放行的静默安全降级。

§3.8 实例专属根 rebase(安全):5 个 fs 工具(read/write/edit/grep/glob)新增
setInstanceRoot 单槽位替换——切实例时删旧实例根、null 也清,静态 config/HMCL
home 根不动;refreshGameContext 改 addRoot→setInstanceRoot 并总是调用。根治
切实例后仍放行旧实例读写的 confinement 失效。write/edit 对'落在 HMCL home 内
但在选中实例根之外(且非 config 根)'的目标加非致命跨实例告警。

§3.9 余项:onSettingsChanged 补 skillRegistry.refresh()(中途新增技能本会话
可见);stream 开关按 build 时烤入补 clearAgentCache(bindPersisted 加
rebuildAgentOnChange 重载,纯 UI 开关仍不清缓存);GameContextTool 隔离标签从
真实 gameDir 派生、不再硬断言 versions/<name>/(CUSTOM 目录实例)。

测试:AiToolPermissionStoreTest 新增 2 例锁定跨实例 mtime 重同步(收紧方向
与新路径规则)。:HMCLAI:test 20/0;:HMCL:test -PheadlessTest 全绿无弹窗;
四 compile 任务全绿(仅 3 条既有 javafx --add-exports 告警)。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>